<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

<!--    <Button-->
<!--        android:id="@+id/test"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintEnd_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        android:text="test"/>-->

    <ImageView
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/download_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/cloud_download"
        android:background="@color/colorPrimaryDark" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/custom_button"
        android:layout_marginHorizontal="20dp">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/glide"
            style="@style/AppTheme.TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/glide"/>
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/loadApp"
            style="@style/AppTheme.TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/load_app"
            />
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/retrofit"
            style="@style/AppTheme.TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retrofit"/>

    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:defaultButtonColor="@color/colorPrimary"
        app:progressColor="@color/colorPrimaryDark"
        app:circleColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>