<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail"
    app:layoutDescription="@xml/content_main_scene">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/file_name"
        android:textSize="@dimen/default_text_size"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="50dp"
        />
    <TextView
        android:id="@+id/FileNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/textView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView1"
        android:layout_marginHorizontal="@dimen/fab_margin"
        tools:text="@string/glide"
        android:textSize="@dimen/default_text_size"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/textView1"
        app:layout_constraintEnd_toEndOf="@id/textView1"
        app:layout_constraintTop_toBottomOf="@id/FileNameTextView"
        android:layout_marginTop="30dp"
        android:text="@string/status"
        android:textSize="@dimen/default_text_size"/>
    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/FileNameTextView"
        app:layout_constraintEnd_toEndOf="@id/FileNameTextView"
        app:layout_constraintTop_toTopOf="@id/textView2"
        tools:text="Fail"
        android:textSize="@dimen/default_text_size"/>

    <Button
        android:id="@+id/okButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="OK"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:textSize="@dimen/default_text_size"
        android:layout_marginBottom="@dimen/fab_margin"/>

</androidx.constraintlayout.motion.widget.MotionLayout>